Using visibility rather than display, I have stacked pages appropriately. Found bug where is f(x) is not filled out, nothing gets graphed, need to create checks for empty input boxes. Also need to work on graphInput css so that it is more flexible

--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,17 @@ body {
 }
 
 #graphWindow {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
 }
 
 #calculatorWindow {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
 }
